[package]
name = "bitcoin-wallet-cli"
version = "0.1.0"
edition = "2021"

[dependencies]

bitcoin = "0.30.1"          // Biblioteca principal do Bitcoin
bitcoincore-rpc = "0.16.0"  // Para comunicação com nó Bitcoin
clap = { version = "4.4", features = ["derive"] }  // Para criar CLI
anyhow = "1.0"              // Tratamento de erros
rand = "0.8"                // Geração de números aleatórios
secp256k1 = { version = "0.27", features = ["rand"] }  // Criptografia