[package]
name = "bitcoin-wallet-cli"
version = "0.1.0"
edition = "2021"

[dependencies]

bitcoin = "0.30.1"          
bitcoincore-rpc = "0.16.0"  
clap = { version = "4.4", features = ["derive"] }  
anyhow = "1.0"              
rand = "0.8"
dotenv = "0.15"                
secp256k1 = { version = "0.27", features = ["rand"] }  